datasource db {
  provider     = "mysql"
  url          = env("DATABASE_URL")
  relationMode = "prisma"
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Customer {
  id             Int       @id @default(autoincrement())
  email          String    @unique
  clientName     String
  legalAdress    String
  deliveryAdress String
  pvnCode        String
  account        String
  bankName       String
  invoice        Invoice[]
  bill           Bill[]
  isDeleted      Boolean   @default(false)
}

model Products {
  id    Int    @id @default(autoincrement())
  name  String
  price Float
  unit  String
}

model Driver {
  id        Int       @id @default(autoincrement())
  name      String
  invoice   Invoice[]
  isDeleted Boolean   @default(false)
}

model Transport {
  id        Int       @id @default(autoincrement())
  name      String
  number    String
  invoice   Invoice[]
  isDeleted Boolean   @default(false)
}

model User {
  id             Int    @id @default(autoincrement())
  name           String
  legalAdress    String
  deliveryAdress String
  pvnCode        String
  account        String
  bankName       String
}

model Invoice {
  id              Int              @id @default(autoincrement())
  dateCreated     String
  dateDelivered   String
  datePaymentDue  String
  invoiceProducts InvoiceProduct[]
  customer        Customer         @relation(fields: [customerId], references: [id])
  customerId      Int
  driver          Driver           @relation(fields: [driverId], references: [id])
  driverId        Int
  transport       Transport        @relation(fields: [transportId], references: [id])
  transportId     Int
  status          String
  createdBy       String

  @@index([customerId])
  @@index([driverId])
  @@index([transportId])
}

model Bill {
  id             Int           @id @default(autoincrement())
  dateCreated    String
  datePaymentDue String
  billProducts   BillProduct[]
  customer       Customer      @relation(fields: [customerId], references: [id])
  customerId     Int
  status         String
  createdBy      String

  @@index([customerId])
}

model InvoiceProduct {
  id          Int     @id @default(autoincrement())
  quantity    Int
  productName String
  price       Float
  unit        String
  invoice     Invoice @relation(fields: [invoiceId], references: [id])
  invoiceId   Int

  @@index([invoiceId])
}

model BillProduct {
  id          Int    @id @default(autoincrement())
  quantity    Int
  productName String
  price       Float
  unit        String
  bill        Bill   @relation(fields: [billId], references: [id])
  billId      Int

  @@index([billId])
}
